--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% if site.google_analytics and jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
+    {% include JB/analytics %}
     {% include html_meta %}
     
 	<!--{% include mathjax_support %}-->
